[workspace]
resolver = "2"
members = [
    "tibber-data-provider",
    "matrix-display-driver",
    "tibber-loader",
    "energy-monitor-lib",
]

[workspace.dependencies]
rumqttc = "0.24.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.4", default-features = false, features = [
    "rustls-tls",
    "json",
] }
tokio-cron-scheduler = { version = "0.10" }
anyhow = "1.0"
futures-util = "0.3"
env_logger = "0.11.3"
log = "0.4.21"
