[package]
name = "matrix-display-driver"
authors = ["Michael Zill"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "emdisplayd"
path = "src/main.rs"

[dependencies]
tibber-loader = { version = "0.1.0", path = "../tibber-loader" }
energy-monitor-lib = { version = "0.1.0", path = "../energy-monitor-lib" }
rumqttc = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
