[package]
name = "tibber-data-provider"
authors = ["Michael Zill"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "emtibberd"
path = "src/main.rs"

[dependencies]
tokio-cron-scheduler = { version = "0.10" }
tibber-loader = { version = "0.1.0", path = "../tibber-loader" }
energy-monitor-lib = { version = "0.1.0", path = "../energy-monitor-lib" }
sml-rs = "0.4.0"
bytes = "1.6.0"
hex = "0.4.3"
futures-util = "0.3"
reqwest = { workspace = true }
rumqttc = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
