[package]
name = "tibber-loader"
authors = ["Michael Zill"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
graphql_client = { version = "0.14.0", features = ["reqwest-rustls"] }
thiserror = "1.0.61"
chrono = "0.4.38"
reqwest = { workspace = true }
rumqttc = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
